src/scss/autocomplete.scss
.textcomplete-dropdown {
  border: 1px solid darkgray;
  background-color: white;
  z-index: 5000 !important;
  padding: $inner-padding 0;
  margin-top: $inner-padding;
  border-radius: $border-radius;
  box-shadow: 0 6px 12px rgba(0,0,0,.175);
  list-style: none;
}

.textcomplete-dropdown li {
  border-top: 1px solid #ddd;
  padding: $inner-padding;
}

.textcomplete-dropdown li:first-child {
  border-top: none;
}

.textcomplete-dropdown li:hover,
.textcomplete-dropdown .active {
  background-color: rgb(110, 183, 219);
}

.textcomplete-dropdown a:hover {
  cursor: pointer;
}

.autocomplete-wrap {
  width: 100%;
}

.autocomplete {
  min-width: 100px;
  max-width: 100%;
  overflow: auto;
  padding: 5px;
  line-height: 20px;
  background-color: white;
  border: 1px solid #ccc;

  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  // br, div { display: none; }

  .field {
    text-decoration: none !important;
    cursor: default !important;
  }
  .signal {
    text-decoration: none !important;
    cursor: default !important;
  }
}

.autocomplete-list {
  background-color: white;
  position: fixed;

  &.active {
    border: 1px solid #ccc;
    border-top: none;
  }

  .autocomplete-suggestion {
    padding: 5px;
    cursor: pointer;

    &.active {
      background-color: #eee;
    }
  }
}

